# yuimedi-paper-20250901

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .speckit_config.yaml  .zenodo.json  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.lit_review  DECISION_LOG.json  GEMINI.md  LICENSE  NOTICE  README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  TODO.md  TODO_FOR_AI.json  TODO_FOR_HUMAN.md  WORKFLOW.md  claude-code-implementation-prompt.md  cover-letter.docx  cover-letter.md  coverage.json  current_tests.txt  github-project-guide-v2.md  implementation-log.md  metadata.yaml  multimedia_appendix.docx  multimedia_appendix.html  multimedia_appendix.md  multimedia_appendix_1.caption.txt  multimedia_appendix_1.docx  multimedia_appendix_1.html  multimedia_appendix_1.md  multimedia_appendix_2.caption.txt  multimedia_appendix_2.docx  (+26 more)
.agents/: CLAUDE.md  __init__.py
.benchmarks/: CLAUDE.md  GEMINI.md
.claude/: CLAUDE.md
.claude-state/: bmad-config-pdf-generation-pipeline.json
.gemini/: GEMINI.md
.github/: CLAUDE.md  GEMINI.md  copilot-instructions.md
.todo_backups/: TODO_FOR_AI_20250820_223523.json  TODO_FOR_AI_20250821_000112.json  TODO_FOR_AI_20250821_000829.json  TODO_FOR_HUMAN_20250821_000112.md  TODO_FOR_HUMAN_20250821_000829.md
ARCHIVED/: 20251121T100315Z_prompt_issues-183-192_first-batch-consolidated-tasks.md  20251121T121432Z_prompt_issues-193-202_second-batch-consolidated-tasks.md  20251123T171840Z_prompt_issues-203-212_third-batch-consolidated-tasks.md  20251123T183229Z_prompt_backmerge-from-main-pattern.md  20251124T045515Z_prompt_issues-batch-4-cleanup_fourth-batch-consolidated-tasks.md  20260101T171838Z_RELEASE_NOTES_v1.2.0.md  20260115_Springer-Nature-Author-Service_Request-Visual-Abstract-Video-Byte.md  20260121_SNAS_Graphical_Abstract_Response.md  20260121_SNAS_Video_Byte_Response.md  20260328T130105Z_critical-assessment_hil-sg-viewpoint-paper.md  20260328T134827Z_recommendations_hil-sg-viewpoint-revisions.md  20260328T135652Z_recommendations_hil-sg-viewpoint-revisions-v2.md  20260328T140009Z_implementation-plan_hil-sg-viewpoint-revisions.md  20260328T164334Z_implementation-plan_hil-sg-viewpoint-revisions-v2.md  20260328T184817Z_proposal_paper-series-rescoping.md  20260329T002238Z_implementation-plan_replace-ari-with-three-pillar-assessment.md  20260609T233958Z_critical-assessment_i-jmr-r1-pre-resubmission.md  CLAUDE.md  GEMINI.md  README.md  TMP-yuiquery-update-sept2025_20250903T075200Z.md
abstract-visual-video/: 20260209T235900Z_visual-abstract_critical-assessment.md  20260323T070000Z_video-byte_critical-assessment.md  20260323T070500Z_video-byte_email-draft.md  20260323T071500Z_email-draft_reopen-visual-abstract.md  20260323T071500Z_visual-abstract_revision-requests.md  20260330T170550Z_visual-abstract_critical-assessment.md  20260330T171930Z_visual-abstract_critical-assessment.md  20260330T173008Z_visual-abstract_email-draft_v2-revision-request.md  20260331T154000Z_GAb0243_SNIndv_trategic Framework for Healthcare Analytics 02.V3.ai  20260331T154000Z_GAb0243_SNIndv_trategic Framework for Healthcare Analytics 02.V3.tif
archive/: README.md  TMP-yuiquery-update-sept2025_20250903T075200Z.md  github-projects-integration-20250903T074900Z.md
compliance/: CLAUDE.md  GEMINI.md  README.md
config/: CLAUDE.md  GEMINI.md  README.md  header.html
data/: README.md
docs/: 20260607_i-jmr-r1-response-to-reviewers.md  20260710_abstract-plaintext.txt  20260710_i-jmr-r2-response-to-reviewers.md  20260710_response-to-reviewers_metadata.txt  20260710_tracked-changes_R1-to-R2.docx  20260710_tracked-changes_R1-to-R2_metadata.txt  20260711_abstract-plaintext.txt  20260711_keywords-plaintext.txt  CLAUDE.md  GEMINI.md  README.md  YuiQuery-Healthcare-Analytics-Research.html  citation-audit-report.md  journal-submission-guide.md  lit_review_workflow.md  validation_report (1).md  validation_report.md  validation_report_edited.md
figures/: CLAUDE.md  GEMINI.md  architecture-gemini.mmd  architecture.mmd  architecture.mmd.caption.txt  architecture.mmd.dot  generate_literature_flow.py  knowledge-cycle.mmd  knowledge-cycle.mmd.caption.txt  literature-flow.mmd  literature-flow.mmd.caption.txt  literature-flow.mmd.dot
images/: CLAUDE.md  GEMINI.md  README.md
lit_review/: CLAUDE.md  GEMINI.md  README.md  __init__.py
planning/: reference-validation-config.json  workflow-upgrade-plan.md
ppr_review/: 20251215_AACODS-Grey-Literature.md  20251215_Revision-Strategy-Milestones.md  arxiv-submission-checklist.md  expert-review-checklist.md  osf-registration-draft.md  zenodo-submission-checklist.md
project-management/: CLAUDE.md  GEMINI.md  README.md  github-milestones.md  methodology-validation-checklist.md  probability-calculation.md  quality-gates.md  risk-assessment-methodology.md  risk-methodology-validation.md  risk-scoring-matrix.csv
scripts/: CLAUDE.md  GEMINI.md  README.md  SYNC_GUIDE.md  abbreviations.json  build_paper.sh  citation_key_mapping.json  convert_inline_citations.py  convert_references_to_bibtex.py  count_citations.py  environment_utils.py  extract_abbreviations.py  github_project_sync.sh  html_to_pdf.js  optimize_svg_for_publication.py  overlay_labels.py  secrets_run.py  secrets_setup.py  sync_github_todos.py  sync_todos.sh  url_allowlist.json  validate_jmir_compliance.py  validate_references.py
specs/: CLAUDE.md  README.md
src/: CLAUDE.md  GEMINI.md  README.md
standards/: CLAUDE.md  GEMINI.md  jmir_submission_add-group-author.md  jmir_submission_adding-authors-incomplete-submissions.md  jmir_submission_affiliation-style.md  jmir_submission_after-revised-submission.md  jmir_submission_american-british-english.md  jmir_submission_article-types.md  jmir_submission_authors-contributions.md  jmir_submission_authorship-criteria.md  jmir_submission_best-fit-journal.md  jmir_submission_canada-infoway.md  jmir_submission_cant-find-submitted-paper.md  jmir_submission_change-author-details-before-publication.md  jmir_submission_change-author-order.md  jmir_submission_change-corresponding-author.md  (+81 more)
(+1168 files in other folders)
