[project]
name = "yuiquery-research"
version = "1.5.0"
description = "YuiQuery Healthcare Analytics Research - Natural Language to SQL in Healthcare"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "YuiQuery Research Team", email = "research@yuimedi.com"}
]
keywords = [
    "healthcare-analytics", 
    "natural-language-processing", 
    "sql-generation", 
    "conversational-ai",
    "academic-research"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No runtime dependencies for automation scripts (scripts/, tools/)
# Workflow skills (.claude/skills/) may require optional dependencies
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
workflow = [
    "duckdb>=0.9.0"  # Required for agentdb-state-manager workflow skill
]

# Note: pandoc filters (pandoc-include-code, pandoc-xnos) are installed via pandoc,
# not pip/uv. Install pandoc separately: brew install pandoc (macOS)

[project.urls]
Homepage = "https://github.com/stharrold/yuimedi-paper-20250901"
Repository = "https://github.com/stharrold/yuimedi-paper-20250901"
Issues = "https://github.com/stharrold/yuimedi-paper-20250901/issues"
Documentation = "https://github.com/stharrold/yuimedi-paper-20250901/blob/main/README.md"

[project.scripts]
sync-todos = "scripts.sync_github_todos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), isort (I), naming (N), pyupgrade (UP)
select = ["E", "F", "I", "N", "W", "UP"]
# Ruff formatter handles line breaks and whitespace automatically
ignore = [
    "N999",  # Allow module names with hyphens (skill naming convention)
    "E501",  # Allow lines longer than 100 chars (SQL strings, long messages)
]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Ignore import rules in __init__.py files
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.todo_backups",
    "/docs",
    "/.venv"
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]